# skg

./: .gitignore  ENGAGEMENT.md  README.md  SETUP.md  docker-compose.lab.yml  install.sh  install_layer4.sh  pyproject.toml  requirements.txt  setup_arch.sh  skg_paper_evidence.py  skg_repo_README.md  targets.yaml  udo systemctl mask skg-*.service skg-*.timer skg-*.path skg-*.socket
.claude/: settings.local.json
archive/: README.md
config/: assistant_contracts.yaml  coupling.yaml  daemon_domains.yaml  data_sources.yaml  skg_config.yaml  targets.yaml
docs/: SKG_AI_ASSISTANT_BEHAVIORS.md  SKG_AI_ASSISTANT_CONTRACT.md  SKG_ARCHITECTURE_SYNTHESIS_20260328.md  SKG_AUDIT_ARCHITECTURE_20260327.md  SKG_AUDIT_CLI_ASSISTANT_20260327.md  SKG_AUDIT_CONFIG_DOCS_INFRA_20260327.md  SKG_AUDIT_CORE_INTEL_SUBSTRATE_20260327.md  SKG_AUDIT_GRAVITY_TOOLCHAIN_20260327.md  SKG_AUDIT_INDEX_20260327.md  SKG_AUDIT_KERNEL_TOPOLOGY_20260327.md  SKG_AUDIT_SENSORS_GRAVITY_FORGE_20260327.md  SKG_AUDIT_TOOLCHAINS_TESTS_20260327.md  SKG_BOTTOM_UP_REMEDIATION_PLAN_20260327.md  SKG_CANONICAL_DATA_MODEL.md  SKG_CANONICAL_RUNTIME_MAP.md  SKG_CLOSED_OBSERVATION_LOOP.md  SKG_CORE_UNIFICATION_AUDIT_20260327.md  SKG_DIAGNOSTIC_REPORT_2026-04-07.md  SKG_EVENT_AND_PEARL_CONTRACT_AUDIT_20260327.md  SKG_FACET_READINESS_MATRIX.md  SKG_FIELD_FUNCTIONAL.md  SKG_FOLDS_AND_POINTS_OF_INTEREST.md  SKG_GRAVITY_BOUNDARY_AUDIT_20260327.md  SKG_IDENTITY_MEMORY_TOPOLOGY_AUDIT_20260327.md  SKG_IDENTITY_NODE_MANIFESTATION_MODEL.md  SKG_INFORMATION_ENERGY_AND_GRAVITY_MODEL.md  SKG_INFORMATION_FOLDS_MODEL.md  SKG_INSTRUMENT_SUPPORT_MODEL.md  SKG_MASTER_REMEDIATION_PLAN_20260328.md  SKG_MEASURED_AUTHORITY_AUDIT_20260327.md  SKG_NODE_MODEL_AUDIT_20260327.md  SKG_OBSERVATION_BOUNDARY_AUDIT_20260327.md  SKG_RED_TEAM_PLAYBOOK.md  (+23 more)
(+604 files in other folders)
